# scan_client

./: .gitignore  Makefile  Makefile.am  Makefile.in  basic_scan_dir.cpp  basic_scan_dir.hpp  basic_scan_dir_service.cpp  basic_scan_dir_service.hpp  packedmessage_scan_client.cpp  packedmessage_scan_client.cpp_backup  packedmessage_scan_client.hpp  scan_client.cpp  scan_client.hpp  scan_client.sln  scan_dir.hpp  scan_dir_impl.cpp  scan_dir_impl.hpp  temp_error.txt
database/: db_connection.cpp  db_connection.hpp  db_controller.cpp  db_controller.hpp
scan_client/: ReadMe.txt  scan_client.cpp  scan_client.vcxproj  scan_client.vcxproj.filters  stdafx.cpp
